--- a/module-3/assignment-2/BookManagementWebApp/bookManagement.html
+++ b/module-3/assignment-2/BookManagementWebApp/bookManagement.html
@@ -1,59 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Book Management - Firestore</title>
-  <link rel="stylesheet" href="bookManagement.css" />
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+    <meta charset="UTF-8" />
+    <title>Book Management App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="bookManagement.css" />
+    <!-- Firebase SDKs -->
+    <script type="module" src="bookManagement.js" defer></script>
 </head>
+
 <body>
-  <div class="app">
-    <aside class="sidebar">
-      <h2>Book Manager</h2>
-      <p class="muted">Add books to Firestore and manage them in realtime.</p>
+    <div class="app-container">
+        <!-- Sidebar -->
+        <aside class="sidebar">
+            <h1>Book Manager</h1>
+            <h2>Add New Book</h2>
+            <form id="addBookForm">
+                <label>
+          Title
+          <input type="text" id="title" required />
+        </label>
 
-      <form id="addForm" class="form">
-        <input id="title" class="input" placeholder="Title" required />
-        <input id="author" class="input" placeholder="Author" required />
-        <input id="price" class="input" type="number" placeholder="Price (number)" required />
-        <input id="imageURL" class="input" placeholder="Cover Image URL" required />
-        <button id="addBtn" class="btn btn-primary" type="submit">Add Book</button>
-      </form>
+                <label>
+          Author
+          <input type="text" id="author" required />
+        </label>
 
-      <div class="controls">
-        <button id="seedBtn" class="btn btn-ghost">Seed Sample Books (if empty)</button>
-        <button id="refreshBtn" class="btn btn-ghost">Refresh</button>
-      </div>
+                <label>
+          Price
+          <input type="number" id="price" min="0" step="0.01" required />
+        </label>
 
-      <p class="note">Replace firebaseConfig in <code>index.js</code> with your project's config and enable Firestore.</p>
-    </aside>
+                <label>
+          Image URL
+          <input type="url" id="imageURL" required />
+        </label>
 
-    <main class="main">
-      <header class="header">
-        <h1>📚 Books</h1>
-        <div id="status" class="status muted">Connecting...</div>
-      </header>
+                <button type="submit" class="btn primary">Add Book</button>
+            </form>
+        </aside>
 
-      <section id="bookGrid" class="grid"></section>
-      <div id="emptyState" class="empty" style="display:none">No Books Available</div>
-    </main>
-  </div>
+        <!-- Main content -->
+        <main class="main-content">
+            <header class="main-header">
+                <h2>All Books</h2>
+                <p>Realtime synced with Firebase Firestore</p>
+            </header>
 
-  <!-- Modal -->
-  <div id="modal" class="modal" aria-hidden="true">
-    <div class="modal-card">
-      <h3 id="mdTitle"></h3>
-      <p id="mdAuthor"></p>
-      <p id="mdPrice"></p>
-      <img id="mdImg" alt="cover" />
-      <div style="text-align:right;margin-top:12px">
-        <button id="closeModal" class="btn btn-ghost">Close</button>
-      </div>
+            <section id="booksContainer" class="books-grid">
+              <div id="book-container"></div>
+            </section>
+        </main>
     </div>
-  </div>
 
-  <script src="bookManagement.js"></script>
+    <!-- View Details Modal -->
+    <div id="modalOverlay" class="modal-overlay hidden">
+        <div class="modal">
+            <button id="closeModalBtn" class="modal-close">&times;</button>
+            <div id="modalContent"></div>
+        </div>
+    </div>
 </body>
+
 </html>
+
